made marker box more transparent, so that selection are more visible. Fixes #832

--- a/client/ext/colorpicker/colorpicker.css
+++ b/client/ext/colorpicker/colorpicker.css
@@ -1,6 +1,6 @@
 .codetools_colorpicker {
     position: absolute;
-    opacity: 0.9;
+    opacity: 0.6;
     border: 1px solid #d9cb89;
     background-color: #fff8c8;
     -webkit-border-radius: 6px;
